--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
 name: 'EnergyPlus Install'
 description: 'Install EnergyPlus'
 inputs:
-  version:  # which version of EnergyPlus to get
-    description: 'What version to download?'
+  tag:  # which tag/build/sha of EnergyPlus to get
+    description: 'What tag to download?'
     required: true
-    default: '24.1.0'
+    default: 'v24.1.0'
   hardened:
     description: 'Use a hardened runtime version? Only valid on Windows'
     required: false
